<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Voice Recorder</string>
    <string name="now_playing_prefix">Now playing: </string>
    <string name="emailPickerTitle">Share Recording via Email</string>
    <string name="dialog_confirm_title">Are You Sure?</string>
    <string name="dialog_confirm_message">Are you sure you want to delete this recording?</string>
    <string name="dialog_set_name_title">Name Your Recording</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_pause">Pause</string>
    <string name="button_play">Play</string>
    <string name="button_record">Record</string>
    <string name="button_save">Save</string>
    <string name="button_stop">Stop</string>
    <string name="button_view_saved_recordings">View Saved Recordings</string>
    <string name="message_name">You must specify a recording name</string>
    <string name="em">em</string>
</resources>
